# Cube

./: CMakeLists.txt  README.md  main.c  scratch
fonts/ubuntu/: .uuid
src/: event.c  event.h  input.c  input.h  main.c  render.c  render.h  scene.c  scene.h  scene_stack.c  scene_stack.h  scenestack.c  scenestack.h  test.c  virtual_joystick.c
src/scenes/: level.c  level.h  main_menu.c  main_menu.h  settings.c  settings.h  world_map.c  world_map.h
tmp/: scratch
tmp/old/: virtual_joystick.h
